Se creó con Colab

--- a/Pregunta2_Consultas_en_SCOPUS_API.ipynb
+++ b/Pregunta2_Consultas_en_SCOPUS_API.ipynb
@@ -119,11 +119,12 @@
         "    print(f\"Error en la solicitud: {response.status_code} - {response.text}\")\n"
       ],
       "metadata": {
-        "id": "V2aNHHo_eYIK",
-        "outputId": "1491b0d1-cee2-4046-ae89-3df559a271b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true,
+        "id": "V2aNHHo_eYIK",
+        "outputId": "1491b0d1-cee2-4046-ae89-3df559a271b3"
       },
       "execution_count": 18,
       "outputs": [
@@ -259,18 +260,18 @@
       "metadata": {
         "id": "Bl8cVx8_lXYn"
       },
-      "execution_count": 23,
+      "execution_count": 55,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 57,
       "metadata": {
         "id": "kuvZBLliTUZy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ab7af052-f882-4f5e-fae0-e8b553cd6ebb"
+        "outputId": "465b12ac-7df9-406e-83cd-928d4b42d1ce"
       },
       "outputs": [
         {
@@ -298,9 +299,9 @@
           "height": 187
         },
         "id": "DBeWOxmnsX9G",
-        "outputId": "cfd22f1b-df26-436a-bf23-50d6548f25c9"
+        "outputId": "7a60b53c-f635-4167-dd11-6d02282a41e9"
       },
-      "execution_count": 37,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "display_data",
@@ -326,7 +327,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8d826a84-d0f3-4371-818a-8bab810fd4aa\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c4a801c3-aa5c-4a45-b170-182a9b0af200\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -389,7 +390,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8d826a84-d0f3-4371-818a-8bab810fd4aa')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c4a801c3-aa5c-4a45-b170-182a9b0af200')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -441,12 +442,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8d826a84-d0f3-4371-818a-8bab810fd4aa button.colab-df-convert');\n",
+              "        document.querySelector('#df-c4a801c3-aa5c-4a45-b170-182a9b0af200 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8d826a84-d0f3-4371-818a-8bab810fd4aa');\n",
+              "        const element = document.querySelector('#df-c4a801c3-aa5c-4a45-b170-182a9b0af200');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -466,7 +467,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_e653cff8-b016-4557-8cbf-da208127d0eb\">\n",
+              "  <div id=\"id_cbd91b39-6ce6-4ae0-afa9-6a1424f82a15\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -510,7 +511,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_e653cff8-b016-4557-8cbf-da208127d0eb button.colab-df-generate');\n",
+              "        document.querySelector('#id_cbd91b39-6ce6-4ae0-afa9-6a1424f82a15 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -539,6 +540,42 @@
       "source": [],
       "metadata": {
         "id": "5trs7ZLlvgSO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "04aJxGKLw4nx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0FOfSh0jxi2f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SJaxvALmxisf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zLP6ERo2xihw"
       },
       "execution_count": null,
       "outputs": []
