--- a/Pregunta2_Consultas_en_SCOPUS_API.ipynb
+++ b/Pregunta2_Consultas_en_SCOPUS_API.ipynb
@@ -357,6 +357,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "Sei9vQ6sIvZ9",
         "outputId": "b559173d-45cf-4407-f998-e14111bbbfef"
       },
@@ -1237,42 +1238,6 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "5trs7ZLlvgSO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "04aJxGKLw4nx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "0FOfSh0jxi2f"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "SJaxvALmxisf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
         "id": "zLP6ERo2xihw"
       },
       "execution_count": null,
@@ -1343,15 +1308,15 @@
           "height": 563
         },
         "id": "_gDiQjK_Fv72",
-        "outputId": "b2a75577-5105-459b-f083-a4171cca9bb4"
+        "outputId": "cbfa6545-7d69-4338-8065-0f77b6315578"
       },
-      "execution_count": null,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-40-c525a455e4cc>:10: FutureWarning: \n",
+            "<ipython-input-84-c525a455e4cc>:10: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
