--- a/Pregunta2_Consultas_en_SCOPUS_API.ipynb
+++ b/Pregunta2_Consultas_en_SCOPUS_API.ipynb
@@ -34,7 +34,7 @@
           "height": 74
         },
         "id": "gnZN5saq5dNj",
-        "outputId": "0e80a425-0156-4ce0-e738-980daa599735"
+        "outputId": "20316dfc-4c41-4291-e539-fcf7903b9af0"
       },
       "execution_count": 1,
       "outputs": [
@@ -46,9 +46,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-d81dde37-2fb1-4e60-958f-4fcb2a1e09d9\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-3c6e9e59-569d-4c56-b997-0a4f9e6df490\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-d81dde37-2fb1-4e60-958f-4fcb2a1e09d9\">\n",
+              "     <output id=\"result-3c6e9e59-569d-4c56-b997-0a4f9e6df490\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -297,7 +297,7 @@
           "height": 681
         },
         "id": "64RTWqFy-Rbj",
-        "outputId": "13a9bb2d-dc82-4069-8c3a-d04d74bd0185"
+        "outputId": "5720b554-07eb-4907-819d-90ea24a33dc0"
       },
       "execution_count": 5,
       "outputs": [
@@ -331,7 +331,7 @@
           "height": 681
         },
         "id": "l8yLOOJI6LWc",
-        "outputId": "e995ace1-b426-464c-b54c-0be50514cf57"
+        "outputId": "0a14d38b-4729-486f-d544-23c01c3d65b3"
       },
       "execution_count": 6,
       "outputs": [
@@ -359,7 +359,7 @@
         },
         "collapsed": true,
         "id": "Sei9vQ6sIvZ9",
-        "outputId": "c59efdce-c2f7-40bc-ffe9-25769ca22fed"
+        "outputId": "be37f5c5-ded6-4b5a-8ab7-f1e74231c8c8"
       },
       "execution_count": 7,
       "outputs": [
@@ -402,225 +402,42 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Cargando nuevamente (temporalmente) el archivo a un DataFrame 'df'\n",
+        "## from google.colab import files\n",
+        "## uploaded = files.upload()\n",
+        "# Nota: se omitió estos pasos, porque el archivo ya fue importado al inicio del programa"
+      ],
+      "metadata": {
+        "id": "ROULITpVX2hQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Cargando nuevamente (temporalmente) el archivo a un DataFrame 'df'\n",
-        "from google.colab import files\n",
-        "uploaded = files.upload()\n",
+        "# from google.colab import files\n",
+        "# uploaded = files.upload()\n",
+        "# Nota: se omitió estos pasos, porque el archivo ya fue importado al inicio del programa"
+      ],
+      "metadata": {
+        "id": "_BknDpAqXfnR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Llevando el archivo a un Dataframe 'df'\n",
         "df = pd.read_csv(list(uploaded.keys())[0])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 74
-        },
-        "id": "slG-YkQTJGp7",
-        "outputId": "35510d6f-3f9e-4333-e84a-72cd446ca5b6"
+        "id": "slG-YkQTJGp7"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "\n",
-              "     <input type=\"file\" id=\"files-d9431eaf-ef0b-4a08-bea9-d29e4f065047\" name=\"files[]\" multiple disabled\n",
-              "        style=\"border:none\" />\n",
-              "     <output id=\"result-d9431eaf-ef0b-4a08-bea9-d29e4f065047\">\n",
-              "      Upload widget is only available when the cell has been executed in the\n",
-              "      current browser session. Please rerun this cell to enable.\n",
-              "      </output>\n",
-              "      <script>// Copyright 2017 Google LLC\n",
-              "//\n",
-              "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-              "// you may not use this file except in compliance with the License.\n",
-              "// You may obtain a copy of the License at\n",
-              "//\n",
-              "//      http://www.apache.org/licenses/LICENSE-2.0\n",
-              "//\n",
-              "// Unless required by applicable law or agreed to in writing, software\n",
-              "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-              "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-              "// See the License for the specific language governing permissions and\n",
-              "// limitations under the License.\n",
-              "\n",
-              "/**\n",
-              " * @fileoverview Helpers for google.colab Python module.\n",
-              " */\n",
-              "(function(scope) {\n",
-              "function span(text, styleAttributes = {}) {\n",
-              "  const element = document.createElement('span');\n",
-              "  element.textContent = text;\n",
-              "  for (const key of Object.keys(styleAttributes)) {\n",
-              "    element.style[key] = styleAttributes[key];\n",
-              "  }\n",
-              "  return element;\n",
-              "}\n",
-              "\n",
-              "// Max number of bytes which will be uploaded at a time.\n",
-              "const MAX_PAYLOAD_SIZE = 100 * 1024;\n",
-              "\n",
-              "function _uploadFiles(inputId, outputId) {\n",
-              "  const steps = uploadFilesStep(inputId, outputId);\n",
-              "  const outputElement = document.getElementById(outputId);\n",
-              "  // Cache steps on the outputElement to make it available for the next call\n",
-              "  // to uploadFilesContinue from Python.\n",
-              "  outputElement.steps = steps;\n",
-              "\n",
-              "  return _uploadFilesContinue(outputId);\n",
-              "}\n",
-              "\n",
-              "// This is roughly an async generator (not supported in the browser yet),\n",
-              "// where there are multiple asynchronous steps and the Python side is going\n",
-              "// to poll for completion of each step.\n",
-              "// This uses a Promise to block the python side on completion of each step,\n",
-              "// then passes the result of the previous step as the input to the next step.\n",
-              "function _uploadFilesContinue(outputId) {\n",
-              "  const outputElement = document.getElementById(outputId);\n",
-              "  const steps = outputElement.steps;\n",
-              "\n",
-              "  const next = steps.next(outputElement.lastPromiseValue);\n",
-              "  return Promise.resolve(next.value.promise).then((value) => {\n",
-              "    // Cache the last promise value to make it available to the next\n",
-              "    // step of the generator.\n",
-              "    outputElement.lastPromiseValue = value;\n",
-              "    return next.value.response;\n",
-              "  });\n",
-              "}\n",
-              "\n",
-              "/**\n",
-              " * Generator function which is called between each async step of the upload\n",
-              " * process.\n",
-              " * @param {string} inputId Element ID of the input file picker element.\n",
-              " * @param {string} outputId Element ID of the output display.\n",
-              " * @return {!Iterable<!Object>} Iterable of next steps.\n",
-              " */\n",
-              "function* uploadFilesStep(inputId, outputId) {\n",
-              "  const inputElement = document.getElementById(inputId);\n",
-              "  inputElement.disabled = false;\n",
-              "\n",
-              "  const outputElement = document.getElementById(outputId);\n",
-              "  outputElement.innerHTML = '';\n",
-              "\n",
-              "  const pickedPromise = new Promise((resolve) => {\n",
-              "    inputElement.addEventListener('change', (e) => {\n",
-              "      resolve(e.target.files);\n",
-              "    });\n",
-              "  });\n",
-              "\n",
-              "  const cancel = document.createElement('button');\n",
-              "  inputElement.parentElement.appendChild(cancel);\n",
-              "  cancel.textContent = 'Cancel upload';\n",
-              "  const cancelPromise = new Promise((resolve) => {\n",
-              "    cancel.onclick = () => {\n",
-              "      resolve(null);\n",
-              "    };\n",
-              "  });\n",
-              "\n",
-              "  // Wait for the user to pick the files.\n",
-              "  const files = yield {\n",
-              "    promise: Promise.race([pickedPromise, cancelPromise]),\n",
-              "    response: {\n",
-              "      action: 'starting',\n",
-              "    }\n",
-              "  };\n",
-              "\n",
-              "  cancel.remove();\n",
-              "\n",
-              "  // Disable the input element since further picks are not allowed.\n",
-              "  inputElement.disabled = true;\n",
-              "\n",
-              "  if (!files) {\n",
-              "    return {\n",
-              "      response: {\n",
-              "        action: 'complete',\n",
-              "      }\n",
-              "    };\n",
-              "  }\n",
-              "\n",
-              "  for (const file of files) {\n",
-              "    const li = document.createElement('li');\n",
-              "    li.append(span(file.name, {fontWeight: 'bold'}));\n",
-              "    li.append(span(\n",
-              "        `(${file.type || 'n/a'}) - ${file.size} bytes, ` +\n",
-              "        `last modified: ${\n",
-              "            file.lastModifiedDate ? file.lastModifiedDate.toLocaleDateString() :\n",
-              "                                    'n/a'} - `));\n",
-              "    const percent = span('0% done');\n",
-              "    li.appendChild(percent);\n",
-              "\n",
-              "    outputElement.appendChild(li);\n",
-              "\n",
-              "    const fileDataPromise = new Promise((resolve) => {\n",
-              "      const reader = new FileReader();\n",
-              "      reader.onload = (e) => {\n",
-              "        resolve(e.target.result);\n",
-              "      };\n",
-              "      reader.readAsArrayBuffer(file);\n",
-              "    });\n",
-              "    // Wait for the data to be ready.\n",
-              "    let fileData = yield {\n",
-              "      promise: fileDataPromise,\n",
-              "      response: {\n",
-              "        action: 'continue',\n",
-              "      }\n",
-              "    };\n",
-              "\n",
-              "    // Use a chunked sending to avoid message size limits. See b/62115660.\n",
-              "    let position = 0;\n",
-              "    do {\n",
-              "      const length = Math.min(fileData.byteLength - position, MAX_PAYLOAD_SIZE);\n",
-              "      const chunk = new Uint8Array(fileData, position, length);\n",
-              "      position += length;\n",
-              "\n",
-              "      const base64 = btoa(String.fromCharCode.apply(null, chunk));\n",
-              "      yield {\n",
-              "        response: {\n",
-              "          action: 'append',\n",
-              "          file: file.name,\n",
-              "          data: base64,\n",
-              "        },\n",
-              "      };\n",
-              "\n",
-              "      let percentDone = fileData.byteLength === 0 ?\n",
-              "          100 :\n",
-              "          Math.round((position / fileData.byteLength) * 100);\n",
-              "      percent.textContent = `${percentDone}% done`;\n",
-              "\n",
-              "    } while (position < fileData.byteLength);\n",
-              "  }\n",
-              "\n",
-              "  // All done.\n",
-              "  yield {\n",
-              "    response: {\n",
-              "      action: 'complete',\n",
-              "    }\n",
-              "  };\n",
-              "}\n",
-              "\n",
-              "scope.google = scope.google || {};\n",
-              "scope.google.colab = scope.google.colab || {};\n",
-              "scope.google.colab._files = {\n",
-              "  _uploadFiles,\n",
-              "  _uploadFilesContinue,\n",
-              "};\n",
-              "})(self);\n",
-              "</script> "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saving scopus.csv to scopus (1).csv\n"
-          ]
-        }
-      ]
+      "execution_count": 13,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -635,9 +452,9 @@
           "height": 758
         },
         "id": "aIAQV0e0KXQz",
-        "outputId": "11e98b50-9ee6-410e-8e30-30d9927f88ae"
+        "outputId": "c1d49178-8ac1-4ae6-9bb0-5bca6b105fb4"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -664,9 +481,9 @@
           "height": 771
         },
         "id": "mcaVhSwOKgYT",
-        "outputId": "d820d0ec-fa31-44a8-fea2-9d5d49fcff12"
+        "outputId": "bdae908c-0e80-4e21-9b09-05391466c355"
       },
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -693,9 +510,9 @@
           "height": 976
         },
         "id": "0HbAbCDB6LL1",
-        "outputId": "6bdb6064-0911-4549-c27d-3ad3b466a602"
+        "outputId": "a508030e-f08d-40ec-aafb-a6102ad0b116"
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
