Se creó con Colab

--- a/Pregunta2_Consultas_en_SCOPUS_API.ipynb
+++ b/Pregunta2_Consultas_en_SCOPUS_API.ipynb
@@ -13,7 +13,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Autor: Eginhardo Navarro Honda"
+        "$\\large\\textit{Consultas en SCOPUS}$\n",
+        "\n",
+        "$\\small\\text{Autor: Eginhardo Navarro Honda}$"
       ],
       "metadata": {
         "id": "ZXM5LuB1muHw"
